@@ -5,15 +5,15 @@
 
     <groupId>org.thingsboard</groupId>
     <artifactId>thingsboard-mcp-server</artifactId>
-    <version>2.1.0</version>
+    <version>2.2.0</version>
     <name>ThingsBoard MCP server</name>
     <description>MCP server for ThingsBoard platform</description>
 
     <properties>
         <spring-boot.version>3.4.10</spring-boot.version>
         <spring.ai.version>1.1.2</spring.ai.version>
-        <thingsboard.version>4.3.0PE</thingsboard.version>
-        <lombok.version>1.18.32</lombok.version>
+        <thingsboard.version>4.4.0-SNAPSHOT</thingsboard.version>
+        <lombok.version>1.18.40</lombok.version>
         <auth0-jwt.version>4.4.0</auth0-jwt.version>
         <surefire.version>3.2.5</surefire.version>
         <json-schema-validator.version>2.0.0</json-schema-validator.version>
@@ -131,7 +131,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <release>17</release>
+                    <release>25</release>
                     <compilerArgs>
                         <arg>-Xlint:deprecation</arg>
                         <arg>-Xlint:removal</arg>
@@ -159,6 +159,7 @@
                 <configuration>
                     <argLine>
                         -XX:+UseStringDeduplication -XX:MaxGCPauseMillis=20
+                        -XX:+EnableDynamicAgentLoading
                         --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                     </argLine>
                 </configuration>
